// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BirthDayField Match snapshot 1`] = `
<div>
  <p
    class="text-2xl text-tertiary mb-2"
  >
    Date of Birth
  </p>
  <div
    class="flex flex-col md:flex-row gap-6"
  >
    <div
      class="w-full"
    >
      <label
        class="text-grey text-sm font-medium capitalize after:content-['*'] after:text-red-500 after:text-md"
      >
        Month
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full font-primary font-light placeholder:text-slate-400 border border-slate-200 rounded-lg transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md appearance-none bg-transparent text-dark h-10 text-sm px-2 py-2 cursor-pointer"
          data-testid="month"
        >
          <option
            class="cursor-pointer"
            data-testid="option-0"
            value="0"
          >
            January
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1"
            value="1"
          >
            February
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2"
            value="2"
          >
            March
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-3"
            value="3"
          >
            April
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-4"
            value="4"
          >
            May
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-5"
            value="5"
          >
            June
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-6"
            value="6"
          >
            July
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-7"
            value="7"
          >
            August
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-8"
            value="8"
          >
            September
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-9"
            value="9"
          >
            October
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-10"
            value="10"
          >
            November
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-11"
            value="11"
          >
            December
          </option>
        </select>
        <div
          class="ml-1 absolute top-[18px] right-3 text-slate-700"
        >
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 0.75L4 4.25L0.75 0.75"
              stroke="#adb5bd"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <label
        class="text-grey text-sm font-medium capitalize after:content-['*'] after:text-red-500 after:text-md"
      >
        Date
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full font-primary font-light placeholder:text-slate-400 border border-slate-200 rounded-lg transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md appearance-none bg-transparent text-dark h-10 text-sm px-2 py-2 cursor-pointer"
          data-testid="date"
        >
          <option
            class="cursor-pointer"
            data-testid="option-1"
            value="1"
          >
            1
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2"
            value="2"
          >
            2
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-3"
            value="3"
          >
            3
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-4"
            value="4"
          >
            4
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-5"
            value="5"
          >
            5
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-6"
            value="6"
          >
            6
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-7"
            value="7"
          >
            7
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-8"
            value="8"
          >
            8
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-9"
            value="9"
          >
            9
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-10"
            value="10"
          >
            10
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-11"
            value="11"
          >
            11
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-12"
            value="12"
          >
            12
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-13"
            value="13"
          >
            13
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-14"
            value="14"
          >
            14
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-15"
            value="15"
          >
            15
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-16"
            value="16"
          >
            16
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-17"
            value="17"
          >
            17
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-18"
            value="18"
          >
            18
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-19"
            value="19"
          >
            19
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-20"
            value="20"
          >
            20
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-21"
            value="21"
          >
            21
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-22"
            value="22"
          >
            22
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-23"
            value="23"
          >
            23
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-24"
            value="24"
          >
            24
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-25"
            value="25"
          >
            25
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-26"
            value="26"
          >
            26
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-27"
            value="27"
          >
            27
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-28"
            value="28"
          >
            28
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-29"
            value="29"
          >
            29
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-30"
            value="30"
          >
            30
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-31"
            value="31"
          >
            31
          </option>
        </select>
        <div
          class="ml-1 absolute top-[18px] right-3 text-slate-700"
        >
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 0.75L4 4.25L0.75 0.75"
              stroke="#adb5bd"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <label
        class="text-grey text-sm font-medium capitalize after:content-['*'] after:text-red-500 after:text-md"
      >
        Year
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full font-primary font-light placeholder:text-slate-400 border border-slate-200 rounded-lg transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md appearance-none bg-transparent text-dark h-10 text-sm px-2 py-2 cursor-pointer"
          data-testid="year"
        >
          <option
            class="cursor-pointer"
            data-testid="option-1900"
            value="1900"
          >
            1900
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1901"
            value="1901"
          >
            1901
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1902"
            value="1902"
          >
            1902
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1903"
            value="1903"
          >
            1903
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1904"
            value="1904"
          >
            1904
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1905"
            value="1905"
          >
            1905
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1906"
            value="1906"
          >
            1906
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1907"
            value="1907"
          >
            1907
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1908"
            value="1908"
          >
            1908
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1909"
            value="1909"
          >
            1909
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1910"
            value="1910"
          >
            1910
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1911"
            value="1911"
          >
            1911
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1912"
            value="1912"
          >
            1912
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1913"
            value="1913"
          >
            1913
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1914"
            value="1914"
          >
            1914
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1915"
            value="1915"
          >
            1915
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1916"
            value="1916"
          >
            1916
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1917"
            value="1917"
          >
            1917
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1918"
            value="1918"
          >
            1918
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1919"
            value="1919"
          >
            1919
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1920"
            value="1920"
          >
            1920
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1921"
            value="1921"
          >
            1921
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1922"
            value="1922"
          >
            1922
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1923"
            value="1923"
          >
            1923
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1924"
            value="1924"
          >
            1924
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1925"
            value="1925"
          >
            1925
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1926"
            value="1926"
          >
            1926
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1927"
            value="1927"
          >
            1927
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1928"
            value="1928"
          >
            1928
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1929"
            value="1929"
          >
            1929
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1930"
            value="1930"
          >
            1930
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1931"
            value="1931"
          >
            1931
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1932"
            value="1932"
          >
            1932
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1933"
            value="1933"
          >
            1933
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1934"
            value="1934"
          >
            1934
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1935"
            value="1935"
          >
            1935
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1936"
            value="1936"
          >
            1936
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1937"
            value="1937"
          >
            1937
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1938"
            value="1938"
          >
            1938
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1939"
            value="1939"
          >
            1939
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1940"
            value="1940"
          >
            1940
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1941"
            value="1941"
          >
            1941
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1942"
            value="1942"
          >
            1942
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1943"
            value="1943"
          >
            1943
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1944"
            value="1944"
          >
            1944
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1945"
            value="1945"
          >
            1945
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1946"
            value="1946"
          >
            1946
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1947"
            value="1947"
          >
            1947
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1948"
            value="1948"
          >
            1948
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1949"
            value="1949"
          >
            1949
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1950"
            value="1950"
          >
            1950
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1951"
            value="1951"
          >
            1951
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1952"
            value="1952"
          >
            1952
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1953"
            value="1953"
          >
            1953
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1954"
            value="1954"
          >
            1954
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1955"
            value="1955"
          >
            1955
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1956"
            value="1956"
          >
            1956
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1957"
            value="1957"
          >
            1957
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1958"
            value="1958"
          >
            1958
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1959"
            value="1959"
          >
            1959
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1960"
            value="1960"
          >
            1960
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1961"
            value="1961"
          >
            1961
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1962"
            value="1962"
          >
            1962
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1963"
            value="1963"
          >
            1963
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1964"
            value="1964"
          >
            1964
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1965"
            value="1965"
          >
            1965
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1966"
            value="1966"
          >
            1966
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1967"
            value="1967"
          >
            1967
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1968"
            value="1968"
          >
            1968
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1969"
            value="1969"
          >
            1969
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1970"
            value="1970"
          >
            1970
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1971"
            value="1971"
          >
            1971
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1972"
            value="1972"
          >
            1972
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1973"
            value="1973"
          >
            1973
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1974"
            value="1974"
          >
            1974
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1975"
            value="1975"
          >
            1975
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1976"
            value="1976"
          >
            1976
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1977"
            value="1977"
          >
            1977
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1978"
            value="1978"
          >
            1978
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1979"
            value="1979"
          >
            1979
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1980"
            value="1980"
          >
            1980
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1981"
            value="1981"
          >
            1981
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1982"
            value="1982"
          >
            1982
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1983"
            value="1983"
          >
            1983
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1984"
            value="1984"
          >
            1984
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1985"
            value="1985"
          >
            1985
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1986"
            value="1986"
          >
            1986
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1987"
            value="1987"
          >
            1987
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1988"
            value="1988"
          >
            1988
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1989"
            value="1989"
          >
            1989
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1990"
            value="1990"
          >
            1990
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1991"
            value="1991"
          >
            1991
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1992"
            value="1992"
          >
            1992
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1993"
            value="1993"
          >
            1993
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1994"
            value="1994"
          >
            1994
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1995"
            value="1995"
          >
            1995
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1996"
            value="1996"
          >
            1996
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1997"
            value="1997"
          >
            1997
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1998"
            value="1998"
          >
            1998
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1999"
            value="1999"
          >
            1999
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2000"
            value="2000"
          >
            2000
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2001"
            value="2001"
          >
            2001
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2002"
            value="2002"
          >
            2002
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2003"
            value="2003"
          >
            2003
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2004"
            value="2004"
          >
            2004
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2005"
            value="2005"
          >
            2005
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2006"
            value="2006"
          >
            2006
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2007"
            value="2007"
          >
            2007
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2008"
            value="2008"
          >
            2008
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2009"
            value="2009"
          >
            2009
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2010"
            value="2010"
          >
            2010
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2011"
            value="2011"
          >
            2011
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2012"
            value="2012"
          >
            2012
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2013"
            value="2013"
          >
            2013
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2014"
            value="2014"
          >
            2014
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2015"
            value="2015"
          >
            2015
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2016"
            value="2016"
          >
            2016
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2017"
            value="2017"
          >
            2017
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2018"
            value="2018"
          >
            2018
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2019"
            value="2019"
          >
            2019
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2020"
            value="2020"
          >
            2020
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2021"
            value="2021"
          >
            2021
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2022"
            value="2022"
          >
            2022
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2023"
            value="2023"
          >
            2023
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2024"
            value="2024"
          >
            2024
          </option>
        </select>
        <div
          class="ml-1 absolute top-[18px] right-3 text-slate-700"
        >
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 0.75L4 4.25L0.75 0.75"
              stroke="#adb5bd"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BirthDayField Match snapshot with empty value 1`] = `
<div>
  <p
    class="text-2xl text-tertiary mb-2"
  >
    Date of Birth
  </p>
  <div
    class="flex flex-col md:flex-row gap-6"
  >
    <div
      class="w-full"
    >
      <label
        class="text-grey text-sm font-medium capitalize after:content-['*'] after:text-red-500 after:text-md"
      >
        Month
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full font-primary font-light placeholder:text-slate-400 border border-slate-200 rounded-lg transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md appearance-none bg-transparent text-dark h-10 text-sm px-2 py-2 cursor-pointer"
          data-testid="month"
        >
          <option
            class="cursor-pointer"
            data-testid="option-0"
            value="0"
          >
            January
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1"
            value="1"
          >
            February
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2"
            value="2"
          >
            March
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-3"
            value="3"
          >
            April
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-4"
            value="4"
          >
            May
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-5"
            value="5"
          >
            June
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-6"
            value="6"
          >
            July
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-7"
            value="7"
          >
            August
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-8"
            value="8"
          >
            September
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-9"
            value="9"
          >
            October
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-10"
            value="10"
          >
            November
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-11"
            value="11"
          >
            December
          </option>
        </select>
        <div
          class="ml-1 absolute top-[18px] right-3 text-slate-700"
        >
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 0.75L4 4.25L0.75 0.75"
              stroke="#adb5bd"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <label
        class="text-grey text-sm font-medium capitalize after:content-['*'] after:text-red-500 after:text-md"
      >
        Date
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full font-primary font-light placeholder:text-slate-400 border border-slate-200 rounded-lg transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md appearance-none bg-transparent text-dark h-10 text-sm px-2 py-2 cursor-pointer"
          data-testid="date"
        />
        <div
          class="ml-1 absolute top-[18px] right-3 text-slate-700"
        >
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 0.75L4 4.25L0.75 0.75"
              stroke="#adb5bd"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <label
        class="text-grey text-sm font-medium capitalize after:content-['*'] after:text-red-500 after:text-md"
      >
        Year
      </label>
      <div
        class="relative"
      >
        <select
          class="w-full font-primary font-light placeholder:text-slate-400 border border-slate-200 rounded-lg transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md appearance-none bg-transparent text-dark h-10 text-sm px-2 py-2 cursor-pointer"
          data-testid="year"
        >
          <option
            class="cursor-pointer"
            data-testid="option-1900"
            value="1900"
          >
            1900
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1901"
            value="1901"
          >
            1901
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1902"
            value="1902"
          >
            1902
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1903"
            value="1903"
          >
            1903
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1904"
            value="1904"
          >
            1904
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1905"
            value="1905"
          >
            1905
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1906"
            value="1906"
          >
            1906
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1907"
            value="1907"
          >
            1907
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1908"
            value="1908"
          >
            1908
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1909"
            value="1909"
          >
            1909
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1910"
            value="1910"
          >
            1910
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1911"
            value="1911"
          >
            1911
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1912"
            value="1912"
          >
            1912
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1913"
            value="1913"
          >
            1913
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1914"
            value="1914"
          >
            1914
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1915"
            value="1915"
          >
            1915
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1916"
            value="1916"
          >
            1916
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1917"
            value="1917"
          >
            1917
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1918"
            value="1918"
          >
            1918
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1919"
            value="1919"
          >
            1919
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1920"
            value="1920"
          >
            1920
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1921"
            value="1921"
          >
            1921
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1922"
            value="1922"
          >
            1922
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1923"
            value="1923"
          >
            1923
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1924"
            value="1924"
          >
            1924
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1925"
            value="1925"
          >
            1925
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1926"
            value="1926"
          >
            1926
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1927"
            value="1927"
          >
            1927
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1928"
            value="1928"
          >
            1928
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1929"
            value="1929"
          >
            1929
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1930"
            value="1930"
          >
            1930
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1931"
            value="1931"
          >
            1931
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1932"
            value="1932"
          >
            1932
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1933"
            value="1933"
          >
            1933
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1934"
            value="1934"
          >
            1934
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1935"
            value="1935"
          >
            1935
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1936"
            value="1936"
          >
            1936
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1937"
            value="1937"
          >
            1937
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1938"
            value="1938"
          >
            1938
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1939"
            value="1939"
          >
            1939
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1940"
            value="1940"
          >
            1940
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1941"
            value="1941"
          >
            1941
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1942"
            value="1942"
          >
            1942
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1943"
            value="1943"
          >
            1943
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1944"
            value="1944"
          >
            1944
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1945"
            value="1945"
          >
            1945
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1946"
            value="1946"
          >
            1946
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1947"
            value="1947"
          >
            1947
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1948"
            value="1948"
          >
            1948
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1949"
            value="1949"
          >
            1949
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1950"
            value="1950"
          >
            1950
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1951"
            value="1951"
          >
            1951
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1952"
            value="1952"
          >
            1952
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1953"
            value="1953"
          >
            1953
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1954"
            value="1954"
          >
            1954
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1955"
            value="1955"
          >
            1955
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1956"
            value="1956"
          >
            1956
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1957"
            value="1957"
          >
            1957
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1958"
            value="1958"
          >
            1958
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1959"
            value="1959"
          >
            1959
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1960"
            value="1960"
          >
            1960
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1961"
            value="1961"
          >
            1961
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1962"
            value="1962"
          >
            1962
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1963"
            value="1963"
          >
            1963
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1964"
            value="1964"
          >
            1964
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1965"
            value="1965"
          >
            1965
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1966"
            value="1966"
          >
            1966
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1967"
            value="1967"
          >
            1967
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1968"
            value="1968"
          >
            1968
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1969"
            value="1969"
          >
            1969
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1970"
            value="1970"
          >
            1970
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1971"
            value="1971"
          >
            1971
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1972"
            value="1972"
          >
            1972
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1973"
            value="1973"
          >
            1973
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1974"
            value="1974"
          >
            1974
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1975"
            value="1975"
          >
            1975
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1976"
            value="1976"
          >
            1976
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1977"
            value="1977"
          >
            1977
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1978"
            value="1978"
          >
            1978
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1979"
            value="1979"
          >
            1979
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1980"
            value="1980"
          >
            1980
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1981"
            value="1981"
          >
            1981
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1982"
            value="1982"
          >
            1982
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1983"
            value="1983"
          >
            1983
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1984"
            value="1984"
          >
            1984
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1985"
            value="1985"
          >
            1985
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1986"
            value="1986"
          >
            1986
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1987"
            value="1987"
          >
            1987
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1988"
            value="1988"
          >
            1988
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1989"
            value="1989"
          >
            1989
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1990"
            value="1990"
          >
            1990
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1991"
            value="1991"
          >
            1991
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1992"
            value="1992"
          >
            1992
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1993"
            value="1993"
          >
            1993
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1994"
            value="1994"
          >
            1994
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1995"
            value="1995"
          >
            1995
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1996"
            value="1996"
          >
            1996
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1997"
            value="1997"
          >
            1997
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1998"
            value="1998"
          >
            1998
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-1999"
            value="1999"
          >
            1999
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2000"
            value="2000"
          >
            2000
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2001"
            value="2001"
          >
            2001
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2002"
            value="2002"
          >
            2002
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2003"
            value="2003"
          >
            2003
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2004"
            value="2004"
          >
            2004
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2005"
            value="2005"
          >
            2005
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2006"
            value="2006"
          >
            2006
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2007"
            value="2007"
          >
            2007
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2008"
            value="2008"
          >
            2008
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2009"
            value="2009"
          >
            2009
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2010"
            value="2010"
          >
            2010
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2011"
            value="2011"
          >
            2011
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2012"
            value="2012"
          >
            2012
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2013"
            value="2013"
          >
            2013
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2014"
            value="2014"
          >
            2014
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2015"
            value="2015"
          >
            2015
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2016"
            value="2016"
          >
            2016
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2017"
            value="2017"
          >
            2017
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2018"
            value="2018"
          >
            2018
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2019"
            value="2019"
          >
            2019
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2020"
            value="2020"
          >
            2020
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2021"
            value="2021"
          >
            2021
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2022"
            value="2022"
          >
            2022
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2023"
            value="2023"
          >
            2023
          </option>
          <option
            class="cursor-pointer"
            data-testid="option-2024"
            value="2024"
          >
            2024
          </option>
        </select>
        <div
          class="ml-1 absolute top-[18px] right-3 text-slate-700"
        >
          <svg
            fill="none"
            height="5"
            viewBox="0 0 8 5"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 0.75L4 4.25L0.75 0.75"
              stroke="#adb5bd"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
